--- a/remote-testcontainers/pom.xml
+++ b/remote-testcontainers/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.littlewings</groupId>
-    <artifactId>remote-testcontainer</artifactId>
+    <artifactId>remote-testcontainers</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
     <properties>
